sumo/tests/sumo/output/e1/errors/file_false/errors.sumo
Error: Could not build output file 'xxx/detector.xml'.
Quitting (on error).
